:tada: Home page

--- a/index.html
+++ b/index.html
@@ -19,24 +19,70 @@
     <div class="row text-center">
       <div class="links">
         <a href="index.html">Sobre</a>
-        <a href="skills.html">Habilidades</a>
+        <!-- <a href="skills.html">Habilidades</a> -->
         <a href="https://wa.me/5519982330689">Contato</a>
       </div>
     </div>
   </header>
-  
+
   <main>
     <div class="container">
-      <div class="row text-center">
-        <div id="wrapper">
-          <a href="https://github.com/lanzath" target="_blank"><img
-              src="https://avatars0.githubusercontent.com/u/39680004?s=400&v=4" alt="Lanza"></a>
-          <h1>Thiago Lanza</h1>
-          <h3>Desenvolvedor Node.js Jr.</h3>
-          <p>
-            Desenvolvedor back-end jr. com foco em node.js, busco aprimorar meus conhecimentos com prática e estudo.
-          </p>
-          <p>Estudante da <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a></p>
+      <div class="row text-center align-items-center justify-content-center">
+        <div class="col-md-6">
+          <div id="wrapper">
+            <a href="https://github.com/lanzath" target="_blank"><img
+                src="https://avatars0.githubusercontent.com/u/39680004?s=400&v=4" alt="Lanza"></a>
+            <h1>Thiago Lanza</h1>
+            <h3>Desenvolvedor Node.js Jr.</h3>
+            <p>
+              Desenvolvedor back-end jr. com foco em node.js, busco aprimorar meus conhecimentos com prática e estudo.
+            </p>
+            <p>Estudante da <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a></p>
+          </div>
+        </div>
+
+        <div class="col-md-6 text-center">
+          <div class="row text-center">
+            <div class="col-md-12">
+              <h1>Skills</h1>
+            </div>
+          </div>
+            <div class="row">
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card img-fluid">
+                  <img src="/assets/nodejs-logo.png" class="img-fluid" alt="nodejs">
+                </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card img-fluid">
+                  <img src="/assets/express-js.png" class="img-fluid" alt="express.js">
+                </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card img-fluid">
+                  <img src="assets/JSON-logo.png" class="img-fluid" alt="JSON">
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card img-fluid">
+                  <img src="/assets/git-github-logo.png" class="img-fluid" alt="git and github">
+                </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card img-fluid">
+                  <img src="/assets/restapi.png" class="img-fluid" alt="restapi">
+                </div>
+              </div>
+              <div class="col-md-4 d-flex justify-content-center">
+                <div class="card img-fluid">
+                  <img src="/assets/linux-logo.png" class="img-fluid" alt="Linux OS">
+                </div>
+              </div>
+            </div>
+         
         </div>
       </div>
     </div>
