--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="col-md-4 d-flex justify-content-center">
                             <div class="card img-fluid">
-                                <img src="assets/mysql.png" class="img-fluid" alt="mysql">
+                                <img src="/assets/mysql.png" class="img-fluid" alt="mysql">
                             </div>
                         </div>
                     </div>
