:sparkles: New skills added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Thiago Lanza | Jr. Node.JS Developer</title>
+    <title>Lanza | Jr. Node.JS/Laravel Developer</title>
 
     <!-- Bootstrap only for flex and responsive properties -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -33,7 +33,7 @@
                         <a href="https://github.com/lanzath" target="_blank"><img
                                 src="https://avatars0.githubusercontent.com/u/39680004?s=400&v=4" alt="Lanza"></a>
                         <h1>Thiago Lanza</h1>
-                        <h3>Desenvolvedor Node.js Jr.</h3>
+                        <h3>Desenvolvedor Node.js | Laravel Jr.</h3>
                         <p>
                             Desenvolvedor back-end jr. com foco em node.js, busco aprimorar meus conhecimentos com
                             prática e estudo.
