:sparkles: New skills added

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <a href="https://github.com/lanzath" target="_blank"><img
                                 src="https://avatars0.githubusercontent.com/u/39680004?s=400&v=4" alt="Lanza"></a>
                         <h1>Thiago Lanza</h1>
-                        <h3>Desenvolvedor Node.js | Laravel Jr.</h3>
+                        <h3>Node.js | Laravel Jr. Developer</h3>
                         <p>
-                            Desenvolvedor back-end jr. com foco em node.js, busco aprimorar meus conhecimentos com
+                            Desenvolvedor back-end jr. com foco em desenvolvimento de APIs RESTful em node.js e PHP Laravel, busco aprimorar meus conhecimentos com
                             prática e estudo.
                         </p>
                         <p>Estudante da <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a></p>
