:sparkles: Added new description, updated styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="container-fluid">
-        <div class="row text-center">
+        <div class="row text-center d-flex justify-content-center">
             <div class="links">
                 <a href="index.html">Sobre</a>
                 <!-- <a href="skills.html">Habilidades</a> -->
@@ -35,10 +35,12 @@
                         <h1>Thiago Lanza</h1>
                         <h3>Node.js | Laravel Jr. Developer</h3>
                         <p>
-                            Desenvolvedor back-end jr. com foco em desenvolvimento de APIs RESTful em node.js e PHP Laravel, busco aprimorar meus conhecimentos com
-                            prática e estudo.
+                            Desenvolvedor back-end jr. com foco em desenvolvimento de APIs RESTful em node.js e PHP Laravel com
+                            utilização de boas práticas de programação com arquitetura MVC, clean code e TDD.
                         </p>
-                        <p>Estudante da <a href="https://rocketseat.com.br" target="_blank">Rocketseat</a></p>
+                        <p>
+                            Também possuo conhecimentos em front-end com HTML, CSS, JS e Bootstrap.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-6 text-center">
@@ -105,12 +107,13 @@
 
     <footer class="container-fluid">
         <div class="row text-center">
-            <div id="links-footer" class="links">
+            <div id="links-footer" class="links d-flex justify-content-center">
                 <a href="https://github.com/lanzath" target="_blank">Github</a>
                 <a href="https://www.linkedin.com/in/mt-lanza/" target="_blank">LinkedIn</a>
                 <a href="mailto:lanzathm@gmail.com">Email</a>
                 <!-- <a href="https://www.facebook.com/lanza.mthiago" target="_blank">Facebook</a> -->
             </div>
+            <p class="created">Criado com &#10084;&#65039; por <strong>Thiago Lanza</strong></p>
         </div>
     </footer>
 </body>
