--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+    <meta name="theme-color" content="#000000">
+    <meta
+      name="description"
+      content="Site para apresentação profissional como Desenvolvedor"
+    />
     <title>Lanza | Jr. Node.JS/Laravel Developer</title>
-
     <!-- Bootstrap only for flex and responsive properties -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+        crossorigin="anonymous"
+    >
     <link rel="stylesheet" href="/styles/main.css">
 </head>
-
 <body>
     <header class="container-fluid">
         <div class="row text-center d-flex justify-content-center">
@@ -24,14 +29,17 @@
             </div>
         </div>
     </header>
-
     <main>
         <div class="container">
             <div class="row text-center align-items-center justify-content-center">
                 <div class="col-md-6">
                     <div id="wrapper">
-                        <a href="https://github.com/lanzath" target="_blank"><img
-                                src="https://avatars0.githubusercontent.com/u/39680004?s=400&v=4" alt="Lanza"></a>
+                        <a href="https://github.com/lanzath" target="_blank">
+                            <img
+                                src="https://avatars0.githubusercontent.com/u/39680004?s=400&v=4" 
+                                alt="Lanza"
+                            >
+                        </a>
                         <h1>Thiago Lanza</h1>
                         <h3>Node.js | Laravel Jr. Developer</h3>
                         <p>
@@ -104,7 +112,6 @@
             </div>
         </div>
     </main>
-
     <footer class="container-fluid">
         <div class="row text-center">
             <div id="links-footer" class="links d-flex justify-content-center">
@@ -117,5 +124,4 @@
         </div>
     </footer>
 </body>
-
 </html>
