--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Site para apresentação profissional como Desenvolvedor"
     />
-    <title>Lanza | Jr. Node.JS/Laravel Developer</title>
+    <title>Lanza | Jr. Laravel/Node.js Developer</title>
     <!-- Bootstrap only for flex and responsive properties -->
     <link
         rel="stylesheet"
@@ -41,7 +41,7 @@
                             >
                         </a>
                         <h1>Thiago Lanza</h1>
-                        <h3>Node.js | Laravel Jr. Developer</h3>
+                        <h3>Laravel | Node.js Jr. Developer</h3>
                         <p>
                             Desenvolvedor back-end jr. com foco em desenvolvimento de APIs RESTful em node.js e PHP Laravel com
                             utilização de boas práticas de programação com arquitetura MVC, clean code e TDD.
@@ -70,7 +70,7 @@
                         </div>
                         <div class="col-md-4 d-flex justify-content-center">
                             <div class="card img-fluid">
-                                <img src="assets/JSON-logo.png" class="img-fluid" alt="JSON">
+                                <img src="/assets/restapi.png" class="img-fluid" alt="restapi">
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="col-md-4 d-flex justify-content-center">
                             <div class="card img-fluid">
-                                <img src="/assets/mysql.png" class="img-fluid" alt="mysql">
+                                <img src="/assets/lumen.png" class="img-fluid" alt="lumen">
                             </div>
                         </div>
                     </div>
@@ -99,7 +99,7 @@
                         </div>
                         <div class="col-md-4 d-flex justify-content-center">
                             <div class="card img-fluid">
-                                <img src="/assets/restapi.png" class="img-fluid" alt="restapi">
+                                <img src="/assets/mysql.png" class="img-fluid" alt="mysql">
                             </div>
                         </div>
                         <div class="col-md-4 d-flex justify-content-center">
